fix(CHANGELOG.md): fix issue with setting chat name/label when hiding chat name feat(CHANGELOG.md): update official website address to https://zadark.com feat(CHANGELOG.md): hide Zalo interface settings as there is only one default option feat(CHANGELOG.md): add message "**Vui long cho trong giay lat. Co the se mat vai phut ...**" to inform users that installation process may take a few minutes fix(_zadark-prv.scss): add z-index property to threadChat__title::after to fix display issue fix(zadark.scss): uncomment display none for .setting-section:has(> .setting-section-content__theme) feat(index.js): add message "**Vui long cho trong giay lat. Co the se mat vai phut ...**" to inform users that installation process may take a few minutes feat(project.pbxproj): update CURRENT_PROJECT_VERSION to 1697543589 and MARKETING_VERSION to 9.15

--- a/src/core/scss/_zadark-prv.scss
+++ b/src/core/scss/_zadark-prv.scss
@@ -306,6 +306,7 @@
     .threadChat__title {
       &::after {
         opacity: 0;
+        z-index: -1;
       }
 
       * {
